--- a/Week08/sandbox/styles.css
+++ b/Week08/sandbox/styles.css
@@ -1,6 +1,23 @@
 html {
   font-size: 10px;
-  font-family: "Space Mono", sans-serif;
+  font-family: "Space Mono", sans-serif;  
+  background-color: #00539f;
+}
+
+body {
+  width: 1200px;
+  margin: 0 auto;
+  /* margin-top: 0;
+  margin-right: auto;
+  margin-bottom: 0;
+  margin-left: auto; */
+  background-color: #ff9500;
+  /* padding: 0 20px 20px 20px; */
+  padding-top: 0;
+  padding-right: 20px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  border: 5px solid black;
 }
 
 h1 {
